[metadata]
name = aiorobot
version = 0.2.0
description = asyncio interface for iRobot Root
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/entwanne/aiorobot
author = entwanne
author_email = antoine.rozo@gmail.com
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
install_requires =
    bleak
    crc8
